--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
         const endSessionQRCode = "http://end-session"; // Change this to the QR code to end a session
         let sessionStarted = false;
         let scannerEnabled = true;
-        const scannedQRCodes = []; // Array to store scanned QR codes
 
         const toggleScannerButton = document.getElementById("toggleScanner");
         toggleScannerButton.addEventListener("click", toggleScanner);
@@ -94,13 +93,9 @@
         const searchInputField = document.getElementById("searchInput");
 
         function displayResult(message) {
-            // Check if the scanned QR code is already in the list
-            if (!scannedQRCodes.includes(message)) {
-                scannedQRCodes.push(message); // Add scanned QR code to the list
-                const resultElement = document.createElement("p");
-                resultElement.textContent = "Scanned QR Code: " + message;
-                resultContainer.appendChild(resultElement);
-            }
+            const resultElement = document.createElement("p");
+            resultElement.textContent = "Scanned QR Code: " + message;
+            resultContainer.appendChild(resultElement);
         }
 
         function startSession() {
@@ -114,9 +109,7 @@
             sessionStarted = false;
             sessionMessage.style.display = "none";
             searchArea.style.display = "none"; // Hide the search area
-            resultContainer.innerHTML = ""; // Clear the result area
-            scannedQRCodes.length = 0; // Clear the scanned QR codes array
-            startScanner(); // Start the scanner again
+            resultContainer.innerHTML = "Session Ended"; // Display "Session Ended" message
         }
 
         function reduceSearchAreaHeight() {
