--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div id="result"></div>
     <div id="sessionMessage" style="display: none;">Session Started</div>
-
+    <script src="torch.js"></script>
     <script src="html5-qrcode.min.js"></script>
     <script>
         const qrCodeScanner = new Html5Qrcode("reader");
